--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,16 @@
         "yiisoft/yii2-jui": "^2.0.0",
         "yiisoft/yii2-redis": "~2.0.0",
         "yiisoft/yii2-imagine": "~2.0.0",
+        "bower-asset/cropper": "*",
+        "bower-asset/owl.carousel":"*",
+        "bower-asset/sweetalert" : "*",
+        "bower-asset/font-awesome": "^4.0",
+        "bower-asset/html5shiv": "^3.0",
+        "bower-asset/jquery-slimscroll": "^1.3",
+        "bower-asset/flot": "^0.8",
+        "bower-asset/angular": "*",
+        "bower-asset/angular-route": "*",
+        "bower-asset/angular-strap": "*",
         "kartik-v/yii2-widgets": "*",
         "pendalf89/yii2-filemanager": "*"
     },
