--- a/vagrant/nginx/app.conf
+++ b/vagrant/nginx/app.conf
@@ -5,12 +5,50 @@ server {
    listen 80; ## listen for ipv4
    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-   server_name y2aa-frontend.dev;
-   root        /app/frontend/web/;
-   index       index.php;
+   server_name whisnew-frontend.dev;
+   root        /app/frontend/;
+   index       index.html;
 
    access_log  /app/vagrant/nginx/log/frontend-access.log;
    error_log   /app/vagrant/nginx/log/frontend-error.log;
+
+   location / {
+       # Redirect everything that isn't a real file to index.php
+       try_files $uri $uri/ /index.html;
+   }
+
+   # uncomment to avoid processing of calls to non-existing static files by Yii
+   #location ~ \.(js|css|png|jpg|gif|swf|ico|pdf|mov|fla|zip|rar)$ {
+   #    try_files $uri =404;
+   #}
+   #error_page 404 /404.html;
+
+   location ~ \.php$ {
+       include fastcgi_params;
+       #fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+       #fastcgi_pass   127.0.0.1:9000;
+       fastcgi_pass unix:/var/run/php5-fpm.sock;
+       try_files $uri =404;
+   }
+
+   location ~ /\.(ht|svn|git) {
+       deny all;
+   }
+}
+
+server {
+   charset utf-8;
+   client_max_body_size 128M;
+
+   listen 80; ## listen for ipv4
+   #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
+
+   server_name whisnew-backend.dev;
+   root        /app/backend/web/;
+   index       index.php;
+
+   access_log  /app/vagrant/nginx/log/backend-access.log;
+   error_log   /app/vagrant/nginx/log/backend-error.log;
 
    location / {
        # Redirect everything that isn't a real file to index.php
@@ -43,12 +81,12 @@ server {
    listen 80; ## listen for ipv4
    #listen [::]:80 default_server ipv6only=on; ## listen for ipv6
 
-   server_name y2aa-backend.dev;
-   root        /app/backend/web/;
+   server_name whisnew-api.dev;
+   root        /app/api/web/;
    index       index.php;
 
-   access_log  /app/vagrant/nginx/log/backend-access.log;
-   error_log   /app/vagrant/nginx/log/backend-error.log;
+   access_log  /app/vagrant/nginx/log/api-access.log;
+   error_log   /app/vagrant/nginx/log/api-error.log;
 
    location / {
        # Redirect everything that isn't a real file to index.php
