--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,8 @@
         "bower-asset/jquery-slimscroll": "^1.3",
         "bower-asset/flot": "^0.8",
         "kartik-v/yii2-widgets": "*",
+        "kartik-v/yii2-grid": "@dev",
+        "kartik-v/yii2-mpdf": "*",
         "pendalf89/yii2-filemanager": "*"
     },
     "require-dev": {
