--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "kartik-v/yii2-grid": "@dev",
         "kartik-v/yii2-detail-view": "*",
         "kartik-v/yii2-mpdf": "*",
+        "kartik-v/yii2-social": "@dev",
         "pendalf89/yii2-filemanager": "*"
     },
     "require-dev": {
